2013-05-30  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add --dereference to all gtar command.

2013-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/tapelist.c: Do not use g_strcmp0.

2013-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Util.pl, installcheck/amidxtaped.pl: Fix.

2013-05-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amfeatures.h: Add fe_amrecover_storage_in_marshall and
	  fe_amrecover_storage_in_marshall amfeatures.
	* common-src/amfeatures.c: Add fe_amrecover_storage_in_marshall and
	  fe_amrecover_storage_in_marshall amfeatures.
	* common-src/tapelist.h (tapelist_t): Add storage.
	* common-src/tapelist.h: Many prototy change for storage.
	* common-src/tapelist.c: Marshall and unmarshall storage.
	* oldrecover-src/extract_list.c: Handle storage in marshall list.
	* recover-src/extract_list.c: Handle storage in marshall list.
	* perl/Amanda/Chunker/Scribe.pm: Typo.
	* perl/Amanda/DB/Catalog.pm: handle storage.
	* perl/Amanda/Logfile.swg (find_result_t): Add storage.
	* perl/Amanda/Recovery/Planner.pm (make_plan): Add storage_list,
	  all_copy and only_in_storage parameters.
	* perl/Amanda/Recovery/Scan.pm: Handle Storage in log line.
	* perl/Amanda/Report.pm: Handle Storage in log lines.
	* perl/Amanda/Storage.pm: Add DESTROY method.
	* perl/Amanda/Taper/Scribe.pm: Typo.
	* perl/Amanda/Taper/Worker.pm: Add Storage to log lines.
	* perl/Amanda/Util.swg (marshal_tapespec, unmarshal_tapespec): Handle
	  storage, new with_storage argument.
	* server-src/amcheckdump.pl: Check the dumps on all storages.
	* server-src/amfetchdump.pl: Fetch from the specified storage.
	* server-src/amidxtaped.pl: Fetch from the specified storage.
	* server-src/amindexd.c: Send storage to amrecover.
	* server-src/disk_history.h (DUMP_ITEM): Add storage.
	* server-src/disk_history.c: Handle storage.
	* server-src/find.c: Return storage, print storage.