@@ -581,6 +581,10 @@ It can be "DURABLE_REDUCED_AVAILABILITY" for GOOGLE storage.
 (read-write) The tenant_name (for swift v2).
 </listitem></varlistentry>
  <!-- ==== -->
+ <varlistentry><term>TIMEOUT</term><listitem>
+ (read-write) Add a timeout to all transfer to the cloud, default is 0, which is no timeout.
+</listitem></varlistentry>
+ <!-- ==== -->
  <varlistentry><term>TRANSITION-TO-GLACIER</term><listitem>
 (read-write) Default: -1. Set to a value greater or equal to zero to transition a volume to glacier that number of days after it is set to no-reuse.
 </listitem></varlistentry>
